# FY-LXJ

./: .gitignore  README.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-26-liuyun-windows-mvp.md
docs/superpowers/specs/: 2026-06-26-liuyun-todo-windows-design.md
src/: App.css  App.tsx  ErrorBoundary.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/domain/: appSettings.test.ts  appSettings.ts  background.test.ts  background.ts  reminderDispatch.test.ts  reminderDispatch.ts  reminderWindow.test.ts  reminderWindow.ts  reminders.test.ts  reminders.ts  repeat.test.ts  repeat.ts  sampleData.ts  settingsDraft.test.ts  settingsDraft.ts  settingsStorage.test.ts  settingsStorage.ts  tauriCapabilities.test.ts  time.test.ts  time.ts  todoForm.test.ts  todoForm.ts  types.ts
src/storage/: todoRepository.test.ts  todoRepository.ts
